argo-rollouts+traefik/assets/05-canary-rollouts-demo.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: rollouts-demo
spec:
  # replicas: 1
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: rollouts-demo
  strategy:
    canary:
      stableService: stable-rollout
      canaryService: canary-rollout
      analysis:
        templates:
          - templateName: endpoint-200-response
      trafficRouting:
        traefik:
          weightedTraefikServiceName: rollouts-demo # specify traefikService resource name that we have created before
      steps:
      - setWeight: 10
      - pause: {}             # this will halt the rollout until you manually "promote"
      # - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 5}
      - setWeight: 60
      - pause: {duration: 5}  # pause before moving to next step
      - setWeight: 80
      - pause: {duration: 5}
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: rollouts-demo
